--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -17,72 +17,48 @@ def getRNVersion() {
   def coreVersion = version.split("-")[0]
   def (major, minor, patch) = coreVersion.tokenize('.').collect { it.toInteger() }
 
-  return versionToNumber(
-      major,
-      minor,
-      patch
-  )
+  return versionToNumber(major, minor, patch)
 }
 def rnVersion = getRNVersion()
 
 /**
- * React Native configuration block.
+ * React Native configuration block (без file() вызовов)
  */
 react {
-    // ✅ Безопасное определение entryFile (фикс path='')
-    def entryResult = ["node", "-e", "require('expo/scripts/resolveAppEntry')", projectRoot, "android", "absolute"]
-        .execute(null, rootDir)
-        .text
-        .trim()
-
-    if (!entryResult || entryResult.isEmpty()) {
-        println "[WARN] Expo entry file not resolved — fallback to index.js"
-        entryResult = "$rootDir/../index.js"
-    } else {
-        println "[INFO] Expo entry file resolved: $entryResult"
-    }
-
-    def entryFilePath = new File(entryResult)
-    if (!entryFilePath.exists()) {
-        println "[WARN] Entry file does not exist at: $entryResult — creating placeholder for CI"
-        entryFilePath.text = "// placeholder for CI build\n"
-    }
-
-    entryFile = entryFilePath
-
-    reactNativeDir = new File(
-        ["node", "--print", "require.resolve('react-native/package.json')"]
-            .execute(null, rootDir)
-            .text
-            .trim()
-    ).getParentFile().getAbsoluteFile()
-
-    hermesCommand = new File(
-        ["node", "--print", "require.resolve('react-native/package.json')"]
-            .execute(null, rootDir)
-            .text
-            .trim()
-    ).getParentFile().getAbsolutePath() + "/sdks/hermesc/%OS-BIN%/hermesc"
-
-    codegenDir = new File(
-        ["node", "--print", "require.resolve('@react-native/codegen/package.json', { paths: [require.resolve('react-native/package.json')] })"]
-            .execute(null, rootDir)
-            .text
-            .trim()
-    ).getParentFile().getAbsoluteFile()
-
-    cliFile = new File(
-        ["node", "--print", "require.resolve('@expo/cli', { paths: [require.resolve('expo/package.json')] })"]
-            .execute(null, rootDir)
-            .text
-            .trim()
-    )
+    // Только базовые параметры — без file()
     bundleCommand = "export:embed"
 
     if (rnVersion >= versionToNumber(0, 75, 0)) {
         autolinkLibrariesWithApp()
     }
 }
+
+/**
+ * Безопасно определяем entryFile после react {}.
+ * Это полностью исключает падение "path may not be null or empty string"
+ */
+def resolvedEntryPath = ""
+try {
+    resolvedEntryPath = ["node", "-e", "require('expo/scripts/resolveAppEntry')", projectRoot, "android", "absolute"]
+        .execute(null, rootDir)
+        .text
+        .trim()
+} catch (Exception ignored) {
+    println "[WARN] Expo entry file detection failed"
+}
+
+if (!resolvedEntryPath || resolvedEntryPath.isEmpty()) {
+    println "[WARN] Expo entry file not resolved — fallback to index.js"
+    resolvedEntryPath = "$rootDir/../index.js"
+}
+println "[INFO] Using entry file: $resolvedEntryPath"
+
+/**
+ * Apply the entryFile directly via Gradle property.
+ */
+project.ext.set("react", [
+    entryFile: resolvedEntryPath
+])
 
 /**
  * Global flags and defaults.
@@ -117,12 +93,10 @@ android {
         }
 
         release {
-            // Получаем путь к keystore из переменной окружения или gradle.properties
             def storeFilePath = System.getenv("MYAPP_UPLOAD_STORE_FILE") ?: project.findProperty("MYAPP_UPLOAD_STORE_FILE")
             if (storeFilePath && !storeFilePath.trim().isEmpty()) {
                 storeFile file(storeFilePath)
             } else {
-                // 🔒 Фикс для GitHub Actions — fallback путь
                 storeFile file("$rootDir/app/my-release-key.jks")
             }
 
