--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,48 +2,46 @@ apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
 
-// 🛠 Фикс для CI: безопасная версия file()
+// 🧩 Глобальный фикс file('') для CI (Expo / RN 0.75)
 def safeFile(path) {
-    if (path == null || path.trim().isEmpty()) {
-        println "[WARN] ⚠️ Attempted file('') — returning project root as fallback."
+    if (path == null || path.toString().trim().isEmpty()) {
+        println "[WARN] ⚠️ Attempted file('') — returning rootDir as fallback"
         return rootDir
     }
-    return file(path)
+    return new File(path)
 }
 
-// Применяем безопасный file() в глобальном пространстве
+// Переопределяем file() глобально
 ext.file = { path -> safeFile(path) }
 
 def projectRoot = rootDir.getAbsoluteFile().getParentFile().getAbsolutePath()
 
 static def versionToNumber(major, minor, patch) {
-  return patch * 100 + minor * 10000 + major * 1000000
+    return patch * 100 + minor * 10000 + major * 1000000
 }
 
 def getRNVersion() {
-  def version = providers.exec {
-    workingDir(projectDir)
-    commandLine("node", "-e", "console.log(require('react-native/package.json').version);")
-  }.standardOutput.asText.get().trim()
+    def version = providers.exec {
+        workingDir(projectDir)
+        commandLine("node", "-e", "console.log(require('react-native/package.json').version);")
+    }.standardOutput.asText.get().trim()
 
-  def coreVersion = version.split("-")[0]
-  def (major, minor, patch) = coreVersion.tokenize('.').collect { it.toInteger() }
-  return versionToNumber(major, minor, patch)
+    def coreVersion = version.split("-")[0]
+    def (major, minor, patch) = coreVersion.tokenize('.').collect { it.toInteger() }
+    return versionToNumber(major, minor, patch)
 }
+
 def rnVersion = getRNVersion()
 
 react {
-    // Не вызываем file() внутри — только строка
+    // Без file() — безопасно
     bundleCommand = "export:embed"
     if (rnVersion >= versionToNumber(0, 75, 0)) {
         autolinkLibrariesWithApp()
     }
 }
 
-/**
- * Безопасно определяем entryFile после react {}.
- * Это полностью исключает падение "path may not be null or empty string"
- */
+// ⚙️ Безопасно вычисляем entryFile (если Expo не нашёл)
 def resolvedEntryPath = ""
 try {
     resolvedEntryPath = ["node", "-e", "require('expo/scripts/resolveAppEntry')", projectRoot, "android", "absolute"]
@@ -60,16 +58,12 @@ if (!resolvedEntryPath || resolvedEntryPath.isEmpty()) {
 }
 println "[INFO] Using entry file: $resolvedEntryPath"
 
-/**
- * Apply the entryFile directly via Gradle property.
- */
+// Присваиваем для React Native Gradle Plugin
 project.ext.set("react", [
     entryFile: resolvedEntryPath
 ])
 
-/**
- * Global flags and defaults.
- */
+// === ANDROID CONFIG ===
 def enableProguardInReleaseBuilds = (findProperty('android.enableProguardInReleaseBuilds') ?: false).toBoolean()
 def jscFlavor = 'org.webkit:android-jsc:+'
 
@@ -88,9 +82,6 @@ android {
         versionName "1.0.0"
     }
 
-    /**
-     * ✅ Safe signing configuration (works locally and in CI)
-     */
     signingConfigs {
         debug {
             storeFile file('debug.keystore')
@@ -133,9 +124,7 @@ android {
     }
 }
 
-/**
- * Merge static gradle.properties values (e.g., pickFirsts, excludes, etc.)
- */
+// === MERGE GRADLE.PROPERTIES OPTIONS ===
 ["pickFirsts", "excludes", "merges", "doNotStrip"].each { prop ->
     def options = (findProperty("android.packagingOptions.$prop") ?: "").split(",")
     for (i in 0..<options.size()) options[i] = options[i].trim()
@@ -149,6 +138,7 @@ android {
     }
 }
 
+// === DEPENDENCIES ===
 dependencies {
     implementation("com.facebook.react:react-android")
 
@@ -174,9 +164,7 @@ dependencies {
     }
 }
 
-/**
- * Apply native modules for RN < 0.75
- */
+// === REACT NATIVE < 0.75 SUPPORT ===
 if (rnVersion < versionToNumber(0, 75, 0)) {
     apply from: new File(
         ["node", "--print", "require.resolve('@react-native-community/cli-platform-android/package.json', { paths: [require.resolve('react-native/package.json')] })"]
